feat: now pushing to github

--- a/.releaserc
+++ b/.releaserc
@@ -4,3 +4,5 @@ plugins:
 - "@semantic-release/commit-analyzer"
 - "@semantic-release/release-notes-generator"
 - "@semantic-release/git"
+- - "@semantic-release/exec"
+  - successCmd: git push --mirror git@github.com:Adaptavist/terraform-module-helm-grafana-helm.git
